[package]
name = "srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
ctr = "0.9.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
grammers-tl-types = { version = "0.4.0", features = ["tl-mtproto"] }
grammers-mtproto = "0.4.0"
bytes = "1.3.0"
anyhow = "1.0.66"
